[tool.poetry]
name = "rossmann_store_sales"
version = "0.1.0"
description = "Project made at Comunidade DS using public data of the Rossmann Drug Stores available as a Kaggle competition."
authors = ["bernardocortereal <bernardocortereal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.5"
pandas = "^1.4.4"
inflection = "^0.5.1"
jupyterlab-git = "^0.39.2"
jupyterlab-github = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
